Avances del sitio

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <nav class="navbar navbar-expand-md navbar-white bg-white">
       <div class="container">
-        <a class="navbar-brand nav-title" href="#"><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a>
+        <a class="navbar-brand nav-title" href="index.html"><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a>
 
         <button
           class="navbar-toggler"
@@ -72,10 +72,12 @@
         </button>
         <div class="collapse navbar-collapse navbar-menu" id="navbarCollapse">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Projectos</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Sobre Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/soluciones.html">Soluciones</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/servicios.html">Servicios</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/proyectos.html">Projectos</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -108,7 +110,7 @@
                 </h1>
                 <p>Desarrollo de soluciones de inicio a fin, desde la etapa de diseño hasta la construcción final.</p>
                 <!-- <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p> -->
-                <p><a class="btn btn-lg btn-primary btn-theme" href="#"><span class="btn-title">Soluciones</span></a></p>
+                <p><a class="btn btn-lg btn-primary btn-theme" href="pages/soluciones.html"><span class="btn-title">Soluciones</span></a></p>
                 
               </div>
             </div>
@@ -125,7 +127,7 @@
                 </h1>
                 <p>Materias primas de gran variedad y de alta calidad.</p>
                 <!-- <p><a class="btn btn-lg btn-primary" href="#"><span class="btn-title">Check Service</span></a></p> -->
-                <p><a class="btn btn-lg btn-primary btn-theme" href="#"><span class="btn-title">Servicios</span></a></p>
+                <p><a class="btn btn-lg btn-primary btn-theme" href="pages/servicios.html"><span class="btn-title">Servicios</span></a></p>
               </div>
             </div>
           </div>
@@ -141,7 +143,7 @@
                   proyectos.
                 </p>
                 <!-- <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p> -->
-                <p><a class="btn btn-lg btn-primary btn-theme" href="#"><span class="btn-title">Proyectos</span></a></p>
+                <p><a class="btn btn-lg btn-primary btn-theme" href="pages/proyectos.html"><span class="btn-title">Proyectos</span></a></p>
               </div>
             </div>
           </div>
@@ -204,11 +206,12 @@
           <div class="col-6 col-md-2 mb-3 categories">
             <h5>Categorias</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="#">Home</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="#">Features</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="#">Pricing</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="#">FAQs</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="#">About</a></li>
+              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="index.html">Inicio</a></li>
+              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/nosotros.html">Nuestra Empresa</a></li>
+              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/soluciones.html">Soluciones</a></li>
+              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/servicios.html">Servicios</a></li>
+              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/proyectos.html">Proyectos</a></li>
+              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/contacto.html">Contacto</a></li>
             </ul>
           </div>
 
