--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,12 +92,15 @@
       </div>
     </section>
 
+
     <section class="section">
       <div class="container">
         <div class="row">
-          <!-- <div class="col-md-6 offset-md-3 border p-4 shadow bg-light"> -->
-            <div class="col-lg-5">
-            <div class="col-12">
+          
+            <div class="section-title">
+              <p>Para nosotros es importante entender las necesidades del cliente, con esto nos aseguramos de entregar un proyecto que se ajuste a la calidad de vida y/o de trabajo. Por esto cuando desarrollamos una idea se hacen las revisiones necesarias con el cliente para pulir detalles con el fin de obtener un resultado óptimo</p>
+            </div>
+            <div class="col-lg-7 d-flex flex-column justify-content-center">
               <h3 class="fw-normal text-secondary fs-4 text-uppercase mb-4">¿CUÉNTANOS TU PROYECTO?</h3>
             </div>
             <form action="">
