Se agrega variables sass

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
 
+    <meta name="descriptacion" content="Diseño, construcción y servicios de proyectos sobre madera" />
+    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -38,16 +41,16 @@
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small header-social">
               <li>
-                <a href="#" class="nav-link text-secondary img-facebook"></a>
+                <a href="https://www.facebook.com/"  class="nav-link text-secondary img-facebook"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-linkedin"></a>
+                <a href="https://www.linkedin.com/" class="nav-link text-secondary img-linkedin"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-instagram"></a>
+                <a href="https://www.instagram.com/" class="nav-link text-secondary img-instagram"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-twitter"></a>
+                <a href="https://twitter.com/" class="nav-link text-secondary img-twitter"></a>
               </li>
             </ul>
           </div>
@@ -57,7 +60,7 @@
 
     <nav class="navbar navbar-expand-md navbar-white bg-white">
       <div class="container">
-        <a class="navbar-brand nav-title" href="index.html"><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a>
+        <h1><a class="navbar-brand nav-title" href="index.html"><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a></h1>
 
         <button
           class="navbar-toggler"
@@ -72,7 +75,7 @@
         </button>
         <div class="collapse navbar-collapse navbar-menu" id="navbarCollapse">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Sobre Nosotros</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/soluciones.html">Soluciones</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/servicios.html">Servicios</a></li>
@@ -104,10 +107,10 @@
             <div class="container">
               <div class="carousel-caption">
                 <span class="title">La Buena Madera</span>
-                <h1>
+                <h2>
                   Soluciones de carpinteria <br />
                   profesional.
-                </h1>
+                </h2>
                 <p>Desarrollo de soluciones de inicio a fin, desde la etapa de diseño hasta la construcción final.</p>
                 <!-- <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p> -->
                 <p><a class="btn btn-lg btn-primary btn-theme" href="pages/soluciones.html"><span class="btn-title">Soluciones</span></a></p>
@@ -121,10 +124,10 @@
             <div class="container">
               <div class="carousel-caption">
                 <span class="title">La Buena Madera</span>
-                <h1>
+                <h2>
                   Tecnologia y materiales <br />
                   de primera calidad
-                </h1>
+                </h2>
                 <p>Materias primas de gran variedad y de alta calidad.</p>
                 <!-- <p><a class="btn btn-lg btn-primary" href="#"><span class="btn-title">Check Service</span></a></p> -->
                 <p><a class="btn btn-lg btn-primary btn-theme" href="pages/servicios.html"><span class="btn-title">Servicios</span></a></p>
@@ -137,7 +140,7 @@
             <div class="container">
               <div class="carousel-caption">
                 <span class="title">La Buena Madera</span>
-                <h1>Soluciones a las necesidades de nuestros clientes.</h1>
+                <h2>Soluciones a las necesidades de nuestros clientes.</h2>
                 <p>
                   Contamos con un equipo altamente calificado para brindar un servicio de calidad a lo largo de nuestros
                   proyectos.
@@ -233,16 +236,16 @@
           <p>&copy; 2022 La Buena Madera. Todos los derechos reservados.</p>
           <ul class="list-unstyled d-flex footer-social">
             <li class="ms-3">
-              <a href="#" class="text-secondary img-facebook"></a>
+              <a href="https://www.facebook.com/" class="text-secondary img-facebook"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-linkedin"></a>
+              <a href="https://www.linkedin.com/" class="text-secondary img-linkedin"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-instagram"></a>
+              <a href="https://www.instagram.com/" class="text-secondary img-instagram"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-twitter"></a>
+              <a href="https://twitter.com/" class="text-secondary img-twitter"></a>
             </li>
           </ul>
         </div>
