--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,16 +40,16 @@
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small header-social">
               <li>
-                <a href="#" class="nav-link text-secondary img-facebook"></a>
+                <a href="https://www.facebook.com/"  class="nav-link text-secondary img-facebook"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-linkedin"></a>
+                <a href="https://www.linkedin.com/" class="nav-link text-secondary img-linkedin"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-instagram"></a>
+                <a href="https://www.instagram.com/" class="nav-link text-secondary img-instagram"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-twitter"></a>
+                <a href="https://twitter.com/" class="nav-link text-secondary img-twitter"></a>
               </li>
             </ul>
           </div>
@@ -59,7 +59,8 @@
 
     <nav class="navbar navbar-expand-md navbar-white bg-white">
       <div class="container">
-        <a class="navbar-brand nav-title" href="../index.html"><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a>
+        
+        <h1><a class="navbar-brand nav-title" href="../index.html"><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a></h1>
 
         <button
           class="navbar-toggler"
@@ -74,7 +75,7 @@
         </button>
         <div class="collapse navbar-collapse navbar-menu" id="navbarCollapse">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item"><a class="nav-link active" href="../index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="nosotros.html">Sobre Nosotros</a></li>
             <li class="nav-item"><a class="nav-link" href="soluciones.html">Soluciones</a></li>
             <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
@@ -88,7 +89,7 @@
     <section class="page-title" style="background-image: url(../assets/img/title_bg.jpg)">
       <div class="auto-container clearfix">
         <span class="title">La Buena Madera</span>
-        <h1>Nuestros Servicios</h1>
+        <h2>Nuestros Servicios</h2>
       </div>
     </section>
 
@@ -288,16 +289,16 @@
           <p>&copy; 2022 La Buena Madera. Todos los derechos reservados.</p>
           <ul class="list-unstyled d-flex footer-social">
             <li class="ms-3">
-              <a href="#" class="text-secondary img-facebook"></a>
+              <a href="https://www.facebook.com/" class="text-secondary img-facebook"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-linkedin"></a>
+              <a href="https://www.linkedin.com/" class="text-secondary img-linkedin"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-instagram"></a>
+              <a href="https://www.instagram.com/" class="text-secondary img-instagram"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-twitter"></a>
+              <a href="https://twitter.com/" class="text-secondary img-twitter"></a>
             </li>
           </ul>
         </div>
