--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -40,16 +40,16 @@
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small header-social">
               <li>
-                <a href="#" class="nav-link text-secondary img-facebook"></a>
+                <a href="https://www.facebook.com/"  class="nav-link text-secondary img-facebook"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-linkedin"></a>
+                <a href="https://www.linkedin.com/" class="nav-link text-secondary img-linkedin"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-instagram"></a>
+                <a href="https://www.instagram.com/" class="nav-link text-secondary img-instagram"></a>
               </li>
               <li>
-                <a href="#" class="nav-link text-secondary img-twitter"></a>
+                <a href="https://twitter.com/" class="nav-link text-secondary img-twitter"></a>
               </li>
             </ul>
           </div>
@@ -59,7 +59,8 @@
 
     <nav class="navbar navbar-expand-md navbar-white bg-white">
       <div class="container">
-        <a class="navbar-brand nav-title" href="../index.html"><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a>
+        
+        <h1><a class="navbar-brand nav-title" href="../index.html"><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a></h1>
 
         <button
           class="navbar-toggler"
@@ -74,7 +75,7 @@
         </button>
         <div class="collapse navbar-collapse navbar-menu" id="navbarCollapse">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item"><a class="nav-link active" href="../index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="nosotros.html">Sobre Nosotros</a></li>
             <li class="nav-item"><a class="nav-link" href="soluciones.html">Soluciones</a></li>
             <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
@@ -88,7 +89,7 @@
     <section class="page-title" style="background-image: url(../assets/img/title_bg.jpg)">
       <div class="auto-container clearfix">
         <span class="title">La Buena Madera</span>
-        <h1>Nuestros Proyectos</h1>
+        <h2>Nuestros Proyectos</h2>
       </div>
     </section>
 
@@ -99,7 +100,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <video controls>
+                <video controls title="Construcción Terraza Ebano">
                   <source src="../assets/videos/01_construccion_terraza_ebano.mp4" type="video/mp4">
                 </video>
                 <div class="card-body">
@@ -114,7 +115,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <video controls>
+                <video controls title="Cortavista Color Nogal">
                   <source src="../assets/videos/02_cortavista_color_nogal.mp4" type="video/mp4">
                 </video>
                 <div class="card-body">
@@ -129,7 +130,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <video controls>
+                <video controls title="Estacionamiento Pino Oregon">
                   <source src="../assets/videos/03_estacionamiento_pino_oregon.mp4" type="video/mp4">
                 </video>
                 <div class="card-body">
@@ -145,7 +146,7 @@
     
             <div class="col">
               <div class="card shadow-sm">
-                <video controls>
+                <video controls title="Instalación Cortavista">
                   <source src="../assets/videos/04_instalacion_cortavista.mp4" type="video/mp4">
                 </video>
                 <div class="card-body">
@@ -160,7 +161,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <video controls>
+                <video controls title="Terraza Madera">
                   <source src="../assets/videos/05_terraza_madera_terminada.mp4" type="video/mp4">
                 </video>
                 <div class="card-body">
@@ -175,7 +176,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <video controls>
+                <video controls title="Terraza Nogal">
                   <source src="../assets/videos/06_terraza_nogal.mp4" type="video/mp4">
                 </video>
                 <div class="card-body">
@@ -253,16 +254,16 @@
           <p>&copy; 2022 La Buena Madera. Todos los derechos reservados.</p>
           <ul class="list-unstyled d-flex footer-social">
             <li class="ms-3">
-              <a href="#" class="text-secondary img-facebook"></a>
+              <a href="https://www.facebook.com/" class="text-secondary img-facebook"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-linkedin"></a>
+              <a href="https://www.linkedin.com/" class="text-secondary img-linkedin"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-instagram"></a>
+              <a href="https://www.instagram.com/" class="text-secondary img-instagram"></a>
             </li>
             <li class="ms-3">
-              <a href="#" class="text-secondary img-twitter"></a>
+              <a href="https://twitter.com/" class="text-secondary img-twitter"></a>
             </li>
           </ul>
         </div>
