--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
 
     <meta name="descriptacion" content="Diseño, construcción y servicios de proyectos sobre madera" />
-    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
+    <meta
+      name="keywords"
+      content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura"
+    />
 
     <!-- CSS only -->
     <link
@@ -32,7 +35,9 @@
       <div class="px-3 py-2 header-bg text-white">
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <div class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none header-contact">
+            <div
+              class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none header-contact"
+            >
               <a href="tel:5687654321" class="nav-link px-2 text-white"> <i class="img_phone"></i>+56-8765-4321</a>
               <a href="mailto:contacto@buenamadera.com" class="nav-link px-2 text-white"
                 ><i class="img_message"></i> contacto@buenamadera.com</a
@@ -41,16 +46,16 @@
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small header-social">
               <li>
-                <a href="https://www.facebook.com/"  class="nav-link text-secondary img-facebook"></a>
+                <a href="https://www.facebook.com/" target="_blank" class="nav-link text-secondary img-facebook"></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/" class="nav-link text-secondary img-linkedin"></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="nav-link text-secondary img-linkedin"></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/" class="nav-link text-secondary img-instagram"></a>
+                <a href="https://www.instagram.com/" target="_blank" class="nav-link text-secondary img-instagram"></a>
               </li>
               <li>
-                <a href="https://twitter.com/" class="nav-link text-secondary img-twitter"></a>
+                <a href="https://twitter.com/" target="_blank" class="nav-link text-secondary img-twitter"></a>
               </li>
             </ul>
           </div>
@@ -60,7 +65,11 @@
 
     <nav class="navbar navbar-expand-md navbar-white bg-white">
       <div class="container">
-        <h1><a class="navbar-brand nav-title" href="index.html"><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a></h1>
+        <h1>
+          <a class="navbar-brand nav-title" href="index.html"
+            ><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a
+          >
+        </h1>
 
         <button
           class="navbar-toggler"
@@ -102,8 +111,6 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
-
             <div class="container">
               <div class="carousel-caption">
                 <span class="title">La Buena Madera</span>
@@ -112,15 +119,16 @@
                   profesional.
                 </h2>
                 <p>Desarrollo de soluciones de inicio a fin, desde la etapa de diseño hasta la construcción final.</p>
-                <!-- <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p> -->
-                <p><a class="btn btn-lg btn-primary btn-theme" href="pages/soluciones.html"><span class="btn-title">Soluciones</span></a></p>
-                
+
+                <p>
+                  <a class="btn btn-lg btn-primary btn-theme" href="pages/soluciones.html"
+                    ><span class="btn-title">Soluciones</span></a
+                  >
+                </p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
-
             <div class="container">
               <div class="carousel-caption">
                 <span class="title">La Buena Madera</span>
@@ -129,14 +137,16 @@
                   de primera calidad
                 </h2>
                 <p>Materias primas de gran variedad y de alta calidad.</p>
-                <!-- <p><a class="btn btn-lg btn-primary" href="#"><span class="btn-title">Check Service</span></a></p> -->
-                <p><a class="btn btn-lg btn-primary btn-theme" href="pages/servicios.html"><span class="btn-title">Servicios</span></a></p>
+
+                <p>
+                  <a class="btn btn-lg btn-primary btn-theme" href="pages/servicios.html"
+                    ><span class="btn-title">Servicios</span></a
+                  >
+                </p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
-
             <div class="container">
               <div class="carousel-caption">
                 <span class="title">La Buena Madera</span>
@@ -145,8 +155,12 @@
                   Contamos con un equipo altamente calificado para brindar un servicio de calidad a lo largo de nuestros
                   proyectos.
                 </p>
-                <!-- <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p> -->
-                <p><a class="btn btn-lg btn-primary btn-theme" href="pages/proyectos.html"><span class="btn-title">Proyectos</span></a></p>
+
+                <p>
+                  <a class="btn btn-lg btn-primary btn-theme" href="pages/proyectos.html"
+                    ><span class="btn-title">Proyectos</span></a
+                  >
+                </p>
               </div>
             </div>
           </div>
@@ -190,34 +204,48 @@
       <div class="container text-white">
         <div class="row">
           <div class="footer-column col-xl-4 col-lg-5 col-md-12 col-sm-12 text-white">
-            
             <div class="footer-widget about-widget">
-                <div class="footer-title">
-                    <figure class="image"><a href="index.html"><img src="assets/img/footer_logo.png" alt="">La Buena Madera</a></figure>
-                </div>
-                <div class="footer-contact" >
-                    <!-- <div class="text resume">Tenemos más de 10 años de experiencia. Nos enorgullecemos de ofrecer soluciones de gran nivel para nuestros clientes a lo largo del pais.</div> -->
-                    <ul>
-                      <li class="nav-item mb-2"><span class="fa img-map"></span> Santiago, Chile.</li>
-                      <li class="nav-item mb-2"><span class="fa img-message"></span><a href="mailto:contacto@buenamadera.com"> contacto@buenamadera.com</a></li> 
-                      <li class="nav-item mb-2"><span class="fa img-phone"></span><a href="tel:56-8765-4321"> +56-8765-4321</a></li>
-                    </ul>
-                </div>
+              <div class="footer-title">
+                <figure class="image">
+                  <a href="index.html"><img src="assets/img/footer_logo.png" alt="" />La Buena Madera</a>
+                </figure>
+              </div>
+              <div class="footer-contact">
+                <ul>
+                  <li class="nav-item mb-2"><span class="fa img-map"></span> Santiago, Chile.</li>
+                  <li class="nav-item mb-2">
+                    <span class="fa img-message"></span
+                    ><a href="mailto:contacto@buenamadera.com"> contacto@buenamadera.com</a>
+                  </li>
+                  <li class="nav-item mb-2">
+                    <span class="fa img-phone"></span><a href="tel:56-8765-4321"> +56-8765-4321</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div>
+          </div>
 
           <div class="col-6 col-md-2 mb-3 categories">
             <h5>Categorias</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="index.html">Inicio</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/nosotros.html">Nuestra Empresa</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/soluciones.html">Soluciones</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/servicios.html">Servicios</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/proyectos.html">Proyectos</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="pages/contacto.html">Contacto</a></li>
+              <li class="nav-item mb-2">
+                <span class="fa img-arrow"></span><a href="pages/nosotros.html">Nuestra Empresa</a>
+              </li>
+              <li class="nav-item mb-2">
+                <span class="fa img-arrow"></span><a href="pages/soluciones.html">Soluciones</a>
+              </li>
+              <li class="nav-item mb-2">
+                <span class="fa img-arrow"></span><a href="pages/servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item mb-2">
+                <span class="fa img-arrow"></span><a href="pages/proyectos.html">Proyectos</a>
+              </li>
+              <li class="nav-item mb-2">
+                <span class="fa img-arrow"></span><a href="pages/contacto.html">Contacto</a>
+              </li>
             </ul>
           </div>
-
 
           <div class="col-md-5 offset-md-1 mb-3">
             <form>
@@ -236,16 +264,16 @@
           <p>&copy; 2022 La Buena Madera. Todos los derechos reservados.</p>
           <ul class="list-unstyled d-flex footer-social">
             <li class="ms-3">
-              <a href="https://www.facebook.com/" class="text-secondary img-facebook"></a>
+              <a href="https://www.facebook.com/" target="_blank" class="text-secondary img-facebook"></a>
             </li>
             <li class="ms-3">
-              <a href="https://www.linkedin.com/" class="text-secondary img-linkedin"></a>
+              <a href="https://www.linkedin.com/" target="_blank" class="text-secondary img-linkedin"></a>
             </li>
             <li class="ms-3">
-              <a href="https://www.instagram.com/" class="text-secondary img-instagram"></a>
+              <a href="https://www.instagram.com/" target="_blank" class="text-secondary img-instagram"></a>
             </li>
             <li class="ms-3">
-              <a href="https://twitter.com/" class="text-secondary img-twitter"></a>
+              <a href="https://twitter.com/" target="_blank" class="text-secondary img-twitter"></a>
             </li>
           </ul>
         </div>
