--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,14 +10,13 @@
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
 
-    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
@@ -40,16 +39,16 @@
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small header-social">
               <li>
-                <a href="https://www.facebook.com/"  class="nav-link text-secondary img-facebook"></a>
+                <a href="https://www.facebook.com/" target="_blank" class="nav-link text-secondary img-facebook"></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/" class="nav-link text-secondary img-linkedin"></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="nav-link text-secondary img-linkedin"></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/" class="nav-link text-secondary img-instagram"></a>
+                <a href="https://www.instagram.com/" target="_blank" class="nav-link text-secondary img-instagram"></a>
               </li>
               <li>
-                <a href="https://twitter.com/" class="nav-link text-secondary img-twitter"></a>
+                <a href="https://twitter.com/" target="_blank" class="nav-link text-secondary img-twitter"></a>
               </li>
             </ul>
           </div>
@@ -59,8 +58,11 @@
 
     <nav class="navbar navbar-expand-md navbar-white bg-white">
       <div class="container">
-        
-        <h1><a class="navbar-brand nav-title" href="../index.html"><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a></h1>
+        <h1>
+          <a class="navbar-brand nav-title" href="../index.html"
+            ><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a
+          >
+        </h1>
 
         <button
           class="navbar-toggler"
@@ -93,74 +95,73 @@
       </div>
     </section>
 
-
     <section class="section">
       <div class="container">
         <div class="row">
-          
-            <div class="section-title">
-              <p>Para nosotros es importante entender las necesidades del cliente, con esto nos aseguramos de entregar un proyecto que se ajuste a la calidad de vida y/o de trabajo. Por esto cuando desarrollamos una idea se hacen las revisiones necesarias con el cliente para pulir detalles con el fin de obtener un resultado óptimo</p>
-            </div>
-            <div class="col-lg-7 d-flex flex-column justify-content-center">
-              <h3 class="fw-normal text-secondary fs-4 text-uppercase mb-4">¿CUÉNTANOS TU PROYECTO?</h3>
-            </div>
-            <form action="">
-              <div class="row g-3">
-                <div class="col-md-6">
-                  <input type="text" class="form-control" placeholder="Nombre y Apellido" />
-                </div>
-                <div class="col-md-6">
-                  <input type="text" class="form-control" placeholder="Dirección" />
-                </div>
-                <div class="col-md-6">
-                  <input type="tel" class="form-control" placeholder="Teléfono" />
-                </div>
-                <div class="col-md-6">
-                  <input type="email" class="form-control" placeholder="Email" />
-                </div>
-                <div class="col-md-6">
-                  <div class="col-12">
-                    <select class="form-select">
-                      <option selected>Tipo de Proyecto</option>
-                      <option value="1">Renovación</option>
-                      <option value="2">Terraza</option>
-                      <option value="3">Corta Vista</option>
-                      <option value="3">Muebleria</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="col-12">
-                    <select class="form-select">
-                      <option selected>Donde nos encontraste</option>
-                      <option value="1">Google</option>
-                      <option value="2">Instagram</option>
-                      <option value="3">Facebook</option>
-                      <option value="4">Referido</option>
-                    </select>
-                  </div>
-                </div>
-
+          <div class="section-title">
+            <p>
+              Para nosotros es importante entender las necesidades del cliente, con esto nos aseguramos de entregar un
+              proyecto que se ajuste a la calidad de vida y/o de trabajo. Por esto cuando desarrollamos una idea se
+              hacen las revisiones necesarias con el cliente para pulir detalles con el fin de obtener un resultado
+              óptimo
+            </p>
+          </div>
+          <div class="col-lg-7 d-flex flex-column justify-content-center">
+            <h3 class="fw-normal text-secondary fs-4 text-uppercase mb-4">¿CUÉNTANOS TU PROYECTO?</h3>
+          </div>
+          <form action="">
+            <div class="row g-3">
+              <div class="col-md-6">
+                <input type="text" class="form-control" placeholder="Nombre y Apellido" />
+              </div>
+              <div class="col-md-6">
+                <input type="text" class="form-control" placeholder="Dirección" />
+              </div>
+              <div class="col-md-6">
+                <input type="tel" class="form-control" placeholder="Teléfono" />
+              </div>
+              <div class="col-md-6">
+                <input type="email" class="form-control" placeholder="Email" />
+              </div>
+              <div class="col-md-6">
                 <div class="col-12">
-                  <textarea
-                    class="form-control"
-                    placeholder="Cuéntanos qué tipo de proyecto deseas realizar"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                    <label class="form-check-label" for="flexCheckDefault">
-                      Confirmo que la información proporcionada en este formulario es verdadera
-                    </label>
-                  </div>
-                </div>
-                <div class="col-12 mt-5">
-                  <button type="submit" class="btn btn-primary float-end btn-theme">Enviar</button>
+                  <select class="form-select">
+                    <option selected>Tipo de Proyecto</option>
+                    <option value="1">Renovación</option>
+                    <option value="2">Terraza</option>
+                    <option value="3">Corta Vista</option>
+                    <option value="3">Muebleria</option>
+                  </select>
                 </div>
               </div>
-            </form>
-          </div>
+              <div class="col-md-6">
+                <div class="col-12">
+                  <select class="form-select">
+                    <option selected>Donde nos encontraste</option>
+                    <option value="1">Google</option>
+                    <option value="2">Instagram</option>
+                    <option value="3">Facebook</option>
+                    <option value="4">Referido</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <textarea class="form-control" placeholder="Cuéntanos qué tipo de proyecto deseas realizar"></textarea>
+              </div>
+              <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                  <label class="form-check-label" for="flexCheckDefault">
+                    Confirmo que la información proporcionada en este formulario es verdadera
+                  </label>
+                </div>
+              </div>
+              <div class="col-12 mt-5">
+                <button type="submit" class="btn btn-primary float-end btn-theme">Enviar</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </section>
@@ -176,7 +177,6 @@
                 </figure>
               </div>
               <div class="footer-contact">
-                <!-- <div class="text resume">Tenemos más de 10 años de experiencia. Nos enorgullecemos de ofrecer soluciones de gran nivel para nuestros clientes a lo largo del pais.</div> -->
                 <ul>
                   <li class="nav-item mb-2"><span class="fa img-map"></span> Santiago, Chile.</li>
                   <li class="nav-item mb-2">
@@ -195,7 +195,9 @@
             <h5>Categorias</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="../index.html">Inicio</a></li>
-              <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="nosotros.html">Nuestra Empresa</a></li>
+              <li class="nav-item mb-2">
+                <span class="fa img-arrow"></span><a href="nosotros.html">Nuestra Empresa</a>
+              </li>
               <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="soluciones.html">Soluciones</a></li>
               <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="servicios.html">Servicios</a></li>
               <li class="nav-item mb-2"><span class="fa img-arrow"></span><a href="proyectos.html">Proyectos</a></li>
@@ -220,16 +222,16 @@
           <p>&copy; 2022 La Buena Madera. Todos los derechos reservados.</p>
           <ul class="list-unstyled d-flex footer-social">
             <li class="ms-3">
-              <a href="https://www.facebook.com/" class="text-secondary img-facebook"></a>
+              <a href="https://www.facebook.com/" target="_blank" class="text-secondary img-facebook"></a>
             </li>
             <li class="ms-3">
-              <a href="https://www.linkedin.com/" class="text-secondary img-linkedin"></a>
+              <a href="https://www.linkedin.com/" target="_blank" class="text-secondary img-linkedin"></a>
             </li>
             <li class="ms-3">
-              <a href="https://www.instagram.com/" class="text-secondary img-instagram"></a>
+              <a href="https://www.instagram.com/" target="_blank" class="text-secondary img-instagram"></a>
             </li>
             <li class="ms-3">
-              <a href="https://twitter.com/" class="text-secondary img-twitter"></a>
+              <a href="https://twitter.com/" target="_blank" class="text-secondary img-twitter"></a>
             </li>
           </ul>
         </div>
