Se agregan texto img alt

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,11 +10,8 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
 
-    <meta name="descriptacion" content="Diseño, construcción y servicios de proyectos sobre madera" />
-    <meta
-      name="keywords"
-      content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura"
-    />
+    <meta name="description" content="Diseño, construcción y servicios de proyectos sobre madera" />
+    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
 
     <!-- CSS only -->
     <link
@@ -67,7 +64,7 @@
       <div class="container">
         <h1>
           <a class="navbar-brand nav-title" href="index.html"
-            ><img alt="" src="assets/img/header_logo.png" />La Buena Madera</a
+            ><img alt="Logo la buena madera" src="assets/img/header_logo.png" />La Buena Madera</a
           >
         </h1>
 
@@ -152,8 +149,7 @@
                 <span class="title">La Buena Madera</span>
                 <h2>Soluciones a las necesidades de nuestros clientes.</h2>
                 <p>
-                  Contamos con un equipo altamente calificado para brindar un servicio de calidad a lo largo de nuestros
-                  proyectos.
+                  Contamos con un equipo altamente calificado para brindar un servicio de calidad a lo largo de nuestros proyectos.
                 </p>
 
                 <p>
@@ -181,7 +177,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="author-img">
-              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="" />
+              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="Nosotros" />
             </div>
           </div>
           <div class="col-lg-7 d-flex flex-column justify-content-center">
@@ -192,9 +188,9 @@
                 Somos una empresa que dio sus primeros pasos en el año 2012, esperanzados en un proyecto de vida, la
                 cual fue tomando forma a través del tiempo, partiendo con uno a dos trabajadores, hoy en día ya
                 ascienden a más de 25 empleados activos y permanentes en la empresa, hemos transformado nuestro oficio
-                en una profesión. Somos un equipo especializado en el área de carpinteria, nuestro personal consta con
+                en una profesión. Somos un equipo especializado en el área de carpintería, nuestro personal consta con
                 años de experiencia y con la sabiduría necesaria para llevar a cabo cada proyecto idealizado por
-                nuestros clientes, cubrimos toda el área de la región y a lo largo del pais
+                nuestros clientes, a lo largo del país
               </p>
             </div>
           </div>
@@ -210,13 +206,13 @@
             <div id="terrazas" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="" />
+                  <img src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="Imagen Terraza Número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="" />
+                  <img src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="Imagen Terraza Número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="" />
+                  <img src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="Imagen Terraza Número 3" />
                 </div>
               </div>
             </div>
@@ -244,13 +240,13 @@
             <div id="quinchos" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/quinchos/quinchos_01.jpg" alt="" />
+                  <img src="../assets/img/servicios/quinchos/quinchos_01.jpg" alt="Imagen Quincho Número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/quinchos/quinchos_02.jpg" alt="" />
+                  <img src="../assets/img/servicios/quinchos/quinchos_02.jpg" alt="Imagen Quincho Número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/quinchos/quinchos_03.jpg" alt="" />
+                  <img src="../assets/img/servicios/quinchos/quinchos_03.jpg" alt="Imagen Quincho Número 3" />
                 </div>
               </div>
             </div>
@@ -280,13 +276,13 @@
             <div id="costavistas" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/cortavista/cortavista_01.png" alt="" />
+                  <img src="../assets/img/servicios/cortavista/cortavista_01.png" alt="Imagen Cortavista Número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/cortavista/cortavista_02.png" alt="" />
+                  <img src="../assets/img/servicios/cortavista/cortavista_02.png" alt="Imagen Cortavista Número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/cortavista/cortavista_03.png" alt="" />
+                  <img src="../assets/img/servicios/cortavista/cortavista_03.png" alt="Imagen Cortavista Número 3" />
                 </div>
               </div>
             </div>
@@ -313,7 +309,7 @@
             <div class="footer-widget about-widget">
               <div class="footer-title">
                 <figure class="image">
-                  <a href="index.html"><img src="assets/img/footer_logo.png" alt="" />La Buena Madera</a>
+                  <a href="index.html"><img src="assets/img/footer_logo.png" alt="Logo La Buena Madera" />La Buena Madera</a>
                 </figure>
               </div>
               <div class="footer-contact">
