--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,9 @@
 
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
+
+    <meta name="description" content="Diseño, construcción y servicios de proyectos sobre madera" />
+    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -59,7 +62,7 @@
       <div class="container">
         <h1>
           <a class="navbar-brand nav-title" href="../index.html"
-            ><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a
+            ><img alt="Logo la buena madera" src="../assets/img/header_logo.png" />La Buena Madera</a
           >
         </h1>
 
@@ -201,7 +204,7 @@
             <div class="footer-widget about-widget">
               <div class="footer-title">
                 <figure class="image">
-                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="" />La Buena Madera</a>
+                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="Logo la buena madera" />La Buena Madera</a>
                 </figure>
               </div>
               <div class="footer-contact">
