--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,9 @@
 
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
+    
+    <meta name="description" content="Diseño, construcción y servicios de proyectos sobre madera" />
+    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -60,7 +63,7 @@
       <div class="container">
         <h1>
           <a class="navbar-brand nav-title" href="../index.html"
-            ><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a
+            ><img alt="Logo la buena madera" src="../assets/img/header_logo.png" />La Buena Madera</a
           >
         </h1>
 
@@ -100,7 +103,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="author-img">
-              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="" />
+              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="Nosotros" />
             </div>
           </div>
           <div class="col-lg-7 d-flex flex-column justify-content-center">
@@ -111,9 +114,9 @@
                 Somos una empresa que dio sus primeros pasos en el año 2012, esperanzados en un proyecto de vida, la
                 cual fue tomando forma a través del tiempo, partiendo con uno a dos trabajadores, hoy en día ya
                 ascienden a más de 25 empleados activos y permanentes en la empresa, hemos transformado nuestro oficio
-                en una profesión. Somos un equipo especializado en el área de carpinteria, nuestro personal consta con
+                en una profesión. Somos un equipo especializado en el área de carpintería, nuestro personal consta con
                 años de experiencia y con la sabiduría necesaria para llevar a cabo cada proyecto idealizado por
-                nuestros clientes, cubrimos toda el área de la región y a lo largo del pais
+                nuestros clientes, a lo largo del pais
               </p>
             </div>
           </div>
@@ -133,9 +136,9 @@
           <div class="col-md-4">
             <div class="card-box text-center">
               <div class="user-pic">
-                <img src="../assets/img/equipo/equipo_avatar_1.jpg" class="img-fluid" alt="User Pic" />
+                <img src="../assets/img/equipo/equipo_avatar_leo.jpg" class="img-fluid" alt="Gerente Leo Figueroa" />
               </div>
-              <h4>Alex Ferguson</h4>
+              <h4>Renato Figueroa</h4>
               <h6>Gerente</h6>
               <hr />
               <p>
@@ -149,9 +152,9 @@
           <div class="col-md-4">
             <div class="card-box text-center">
               <div class="user-pic">
-                <img src="../assets/img/equipo/equipo_avatar_2.jpg" class="img-fluid" alt="User Pic" />
+                <img src="../assets/img/equipo/equipo_avatar_lucas.jpg" class="img-fluid" alt="Jefe de Proyectos Lucas Figueroa" />
               </div>
-              <h4>Arsene Wenger</h4>
+              <h4>Lucas Figueroa</h4>
               <h6>Jefe de Proyectos</h6>
               <hr />
               <p>
@@ -165,9 +168,9 @@
           <div class="col-md-4">
             <div class="card-box text-center">
               <div class="user-pic">
-                <img src="../assets/img/equipo/equipo_avatar_3.jpg" class="img-fluid" alt="User Pic" />
+                <img src="../assets/img/equipo/equipo_avatar_alonso.jpg" class="img-fluid" alt="Arquitecto Alonso Figueroa" />
               </div>
-              <h4>Matt Busby</h4>
+              <h4>Alonso Figueroa</h4>
               <h6>Arquitecto</h6>
               <hr />
               <p>
@@ -188,7 +191,7 @@
             <div class="footer-widget about-widget">
               <div class="footer-title">
                 <figure class="image">
-                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="" />La Buena Madera</a>
+                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="Logo la buena madera" />La Buena Madera</a>
                 </figure>
               </div>
               <div class="footer-contact">
