--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,9 @@
 
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
+
+    <meta name="description" content="Diseño, construcción y servicios de proyectos sobre madera" />
+    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -57,7 +60,7 @@
       <div class="container">
         <h1>
           <a class="navbar-brand nav-title" href="../index.html"
-            ><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a
+            ><img alt="Logo la buena madera" src="../assets/img/header_logo.png" />La Buena Madera</a
           >
         </h1>
 
@@ -103,21 +106,21 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 bg-light text-center border-end border-bottom py-5 px-3">
-            <img width="128" height="128" alt="" src="../assets/icon/servicios/arquitecto.png" />
+            <img width="128" height="128" alt="Imagen servicio arquitectura" src="../assets/icon/servicios/arquitecto.png" />
             <h4 class="mb-3 fw-normal text-uppercase">Elaboración de proyectos</h4>
             <p class="text-secondary">
               Cualificados para ofrecerle el mejor servicio de planeamiento y diseño de proyectos de construcción.
             </p>
           </div>
           <div class="col-md-4 col-sm-6 bg-light text-center border-end border-bottom py-5 px-3">
-            <img width="128" height="128" alt="" src="../assets/icon/servicios/fotorealismo.png" />
+            <img width="128" height="128" alt="Imagen servicio fotorealismo" src="../assets/icon/servicios/fotorealismo.png" />
             <h4 class="mb-3 fw-normal text-uppercase">Fotorealismo 3D</h4>
             <p class="text-secondary">
               Creación de infografías e imágenes 3D que plasmarán con precisión el proyecto que tiene en mente
             </p>
           </div>
           <div class="col-md-4 col-sm-6 bg-light text-center border-bottom py-5 px-3">
-            <img width="128" height="128" alt="" src="../assets/icon/servicios/diseno.png" />
+            <img width="128" height="128" alt="Imagen servicio diseño" src="../assets/icon/servicios/diseno.png" />
             <h4 class="mb-3 fw-normal text-uppercase">Diseño y Arquitectura</h4>
             <p class="text-secondary">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -147,7 +150,6 @@
                 En el primer contacto, nos vas a contar a grandes rasgos via e-mail o por teléfono que proyecto quieres
                 desarrollar para luego agendar una visita en terreno.
               </p>
-              <img src="/images/image-one.jpg" alt="" />
             </div>
           </div>
 
@@ -158,10 +160,9 @@
               <p>
                 En esta etapa conoceremos tus necesidades y requerimientos. Veremos las condiciones del lugar a
                 intervenir y asesoraremos según nuestra experiencia sobre distribuciones y equipamiento. Es necesario
-                tener la mayor cantidad de información posible como fecha de estimada de inicio de obras , presupuesto,
-                ideas y planos de las instalaciones exitentes
+                tener la mayor cantidad de información posible como fecha de estimada de inicio de obras, presupuesto,
+                ideas y planos de las instalaciones existentes.
               </p>
-              <img src="/images/image-two.jpg" alt="" />
             </div>
           </div>
 
@@ -175,7 +176,6 @@
                 el cliente, donde se ajustan detalles, materiales, mobiliario y terminaciones para llegar al resultado
                 optimo y esperado. La cantidad de revisiones va a depender de la envergadura del proyecto.
               </p>
-              <img src="/images/image-three.jpg" alt="" />
             </div>
           </div>
 
@@ -184,11 +184,10 @@
               <span>04</span>
               <h4><a href="#">ENTREGA DEL PROYECTO</a></h4>
               <p>
-                Comenzaremos con la obra una vez estemos seguros que estamos alineados en el aspecto, sensación e
+                Comenzaremos con la obra una vez estemos seguros de que estamos alineados en el aspecto, sensación e
                 intención del diseño. Definido esto, se hace entrega del proyecto final con su cotización. Donde cada
                 partida esta expresada en detalle (precio unitario, cantidad y marca).
               </p>
-              <img src="/images/image-four.jpg" alt="" />
             </div>
           </div>
 
@@ -201,7 +200,6 @@
                 multas y garantías. Una vez firmado este contrato se solicita el anticipo para poder empezar con los
                 trabajos previos a la construcción.
               </p>
-              <img src="/images/image-five.jpg" alt="" />
             </div>
           </div>
 
@@ -210,10 +208,9 @@
               <span>06</span>
               <h4><a href="#">PROGRAMACIÓN DE LA OBRA</a></h4>
               <p>
-                Esta etapa es nuestra, nos tomamos al menos una semana dependiendo la envergadura del proyecto para
-                programar en detalle la obra y asegurarnos que nuestra carta Gantt se cumpla.
+                Esta etapa es nuestra, nos tomamos al menos una semana dependiendo la envergadura del proyecto para programar en detalle 
+                la obra y asegurarnos que nuestro calendario de trabajo se cumpla.
               </p>
-              <img src="/images/image-six.jpg" alt="" />
             </div>
           </div>
 
@@ -225,7 +222,6 @@
                 Una vez esta todo coordinado, iniciamos los trabajos. Cada partida se ejecuta con especialistas
                 calificados. Contamos con procesos de control exhaustivo para asegurar una ejecución óptima..
               </p>
-              <img src="/images/image-six.jpg" alt="" />
             </div>
           </div>
 
@@ -237,7 +233,6 @@
                 Haremos entrega de la obra una vez el cliente esté conforme, se haya cumplido con todo lo estipulado en
                 la cotización, se hayan corregido las observaciones y el lugar de trabajo este perfectamente limpio.
               </p>
-              <img src="/images/image-six.jpg" alt="" />
             </div>
           </div>
 
@@ -246,11 +241,9 @@
               <span>09</span>
               <h4><a href="#">SEGUIMIENTO</a></h4>
               <p>
-                En estapa final, nosotros seguiremos en contacto con usted de forma periodica para realizar un
-                seguimiento al trabajo realizado, dando una respuesta optima sobre el periodo de garantia de nuestro
-                trabajo.
+                En esta etapa final, nosotros seguiremos en contacto con usted para realizar un seguimiento al trabajo realizado, 
+                dando una respuesta optima sobre el periodo de garantía de nuestro trabajo.
               </p>
-              <img src="/images/image-six.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -264,7 +257,7 @@
             <div class="footer-widget about-widget">
               <div class="footer-title">
                 <figure class="image">
-                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="" />La Buena Madera</a>
+                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="Logo la buena madera" />La Buena Madera</a>
                 </figure>
               </div>
               <div class="footer-contact">
