--- a/pages/soluciones.html
+++ b/pages/soluciones.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,9 @@
 
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
     <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
+
+    <meta name="description" content="Diseño, construcción y servicios de proyectos sobre madera" />
+    <meta name="keywords" content="madera, servicio, construccion, terrazas, quinchos, madera, pino, nogal, cortavistas, arquitectura" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -59,7 +62,7 @@
       <div class="container">
         <h1>
           <a class="navbar-brand nav-title" href="../index.html"
-            ><img alt="" src="../assets/img/header_logo.png" />La Buena Madera</a
+            ><img alt="Logo la buena madera" src="../assets/img/header_logo.png" />La Buena Madera</a
           >
         </h1>
 
@@ -101,13 +104,13 @@
             <div id="terrazas" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="" />
+                  <img src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="Imagen Terraza Número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="" />
+                  <img src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="Imagen Terraza Número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="" />
+                  <img src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="Imagen Terraza Número 3" />
                 </div>
               </div>
             </div>
@@ -135,13 +138,13 @@
             <div id="quinchos" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/quinchos/quinchos_01.jpg" alt="" />
+                  <img src="../assets/img/servicios/quinchos/quinchos_01.jpg" alt="Imagen quincho número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/quinchos/quinchos_02.jpg" alt="" />
+                  <img src="../assets/img/servicios/quinchos/quinchos_02.jpg" alt="Imagen quincho número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/quinchos/quinchos_03.jpg" alt="" />
+                  <img src="../assets/img/servicios/quinchos/quinchos_03.jpg" alt="Imagen quincho número 3" />
                 </div>
               </div>
             </div>
@@ -171,13 +174,13 @@
             <div id="costavistas" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/cortavista/cortavista_01.png" alt="" />
+                  <img src="../assets/img/servicios/cortavista/cortavista_01.png" alt="Imagen cortavista número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/cortavista/cortavista_02.png" alt="" />
+                  <img src="../assets/img/servicios/cortavista/cortavista_02.png" alt="Imagen cortavista número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/cortavista/cortavista_03.png" alt="" />
+                  <img src="../assets/img/servicios/cortavista/cortavista_03.png" alt="Imagen cortavista número 3" />
                 </div>
               </div>
             </div>
@@ -204,7 +207,7 @@
             <div class="footer-widget about-widget">
               <div class="footer-title">
                 <figure class="image">
-                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="" />La Buena Madera</a>
+                  <a href="../index.html"><img src="../assets/img/footer_logo.png" alt="Logo la buena madera" />La Buena Madera</a>
                 </figure>
               </div>
               <div class="footer-contact">
