--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -103,7 +103,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="author-img">
-              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="Nosotros" />
+              <img src="../assets/img/nosotros.jpg" class="img-fluid img-corners" alt="Nosotros" />
             </div>
           </div>
           <div class="col-lg-7 d-flex flex-column justify-content-center">
@@ -134,50 +134,37 @@
 
         <div class="row">
           <div class="col-md-4">
-            <div class="card-box text-center">
-              <div class="user-pic">
-                <img src="../assets/img/equipo/equipo_avatar_leo.jpg" class="img-fluid" alt="Gerente Leo Figueroa" />
+            <div class="card shadow-sm">
+              <img src="../assets/img/equipo/equipo_avatar_leo.jpg" class="card-img-top" alt="Gerente Leo Figueroa" />
+              <div class="card-body text-center">
+                <p class="card-text" >
+                  <h4>Renato Figueroa</h4>
+                  <h5>Gerente</h5>
+                  </p>
               </div>
-              <h4>Renato Figueroa</h4>
-              <h6>Gerente</h6>
-              <hr />
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s
-              </p>
-              <hr />
             </div>
           </div>
 
           <div class="col-md-4">
-            <div class="card-box text-center">
-              <div class="user-pic">
+              <div class="card shadow-sm">
                 <img src="../assets/img/equipo/equipo_avatar_lucas.jpg" class="img-fluid" alt="Jefe de Proyectos Lucas Figueroa" />
+                <div class="card-body text-center">
+                  <p class="card-text">
+                    <h4>Lucas Figueroa</h4>
+                    <h5>Jefe de Proyectos</h5>
+                  </p>
+                </div>
               </div>
-              <h4>Lucas Figueroa</h4>
-              <h6>Jefe de Proyectos</h6>
-              <hr />
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s.
-              </p>
-              <hr />
-            </div>
           </div>
 
           <div class="col-md-4">
-            <div class="card-box text-center">
-              <div class="user-pic">
+            <div class="card shadow-sm">
                 <img src="../assets/img/equipo/equipo_avatar_alonso.jpg" class="img-fluid" alt="Arquitecto Alonso Figueroa" />
-              </div>
-              <h4>Alonso Figueroa</h4>
-              <h6>Arquitecto</h6>
-              <hr />
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s.
-              </p>
-              <hr />
+                <div class="card-body text-center">
+                  <p class="card-text">
+                    <h4>Alonso Figueroa</h4>
+                    <h5>Arquitecto</h5>
+                </div>
             </div>
           </div>
         </div>
