--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -98,7 +98,7 @@
     </section>
 
     <section class="section">
-      <div class="album py-5 bg-light">
+      <div class="album py-5">
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
@@ -107,7 +107,7 @@
                   <source src="../assets/videos/01_construccion_terraza_ebano.mp4" type="video/mp4" />
                 </video>
                 <div class="card-body">
-                  <p class="card-text">Construcción Terraza Ebano Pino Oregon</p>
+                  <p class="global-text">Construcción Terraza Ebano Pino Oregon</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary btn-theme">Ver Proyecto</button>
@@ -122,7 +122,7 @@
                   <source src="../assets/videos/02_cortavista_color_nogal.mp4" type="video/mp4" />
                 </video>
                 <div class="card-body">
-                  <p class="card-text">Cortavista Color Nogal.</p>
+                  <p class="global-text">Cortavista Color Nogal.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary btn-theme">Ver Proyecto</button>
@@ -137,7 +137,7 @@
                   <source src="../assets/videos/03_estacionamiento_pino_oregon.mp4" type="video/mp4" />
                 </video>
                 <div class="card-body">
-                  <p class="card-text">Estacionamiento Pino Oregon.</p>
+                  <p class="global-text">Estacionamiento Pino Oregon.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary btn-theme">Ver Proyecto</button>
@@ -153,7 +153,7 @@
                   <source src="../assets/videos/04_instalacion_cortavista.mp4" type="video/mp4" />
                 </video>
                 <div class="card-body">
-                  <p class="card-text">Instalación Cortavista.</p>
+                  <p class="global-text">Instalación Cortavista.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary btn-theme">Ver Proyecto</button>
@@ -168,7 +168,7 @@
                   <source src="../assets/videos/05_terraza_madera_terminada.mp4" type="video/mp4" />
                 </video>
                 <div class="card-body">
-                  <p class="card-text">Terraza Madera Terminada.</p>
+                  <p class="global-text">Terraza Madera Terminada.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary btn-theme">Ver Proyecto</button>
@@ -183,7 +183,7 @@
                   <source src="../assets/videos/06_terraza_nogal.mp4" type="video/mp4" />
                 </video>
                 <div class="card-body">
-                  <p class="card-text">Terraza Nogal.</p>
+                  <p class="card-text global-text">Terraza Nogal.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary btn-theme">Ver Proyecto</button>
