--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </nav>
 
     <main>
-      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="background-image: url(assets/img/carousel_bg.jpg)">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -177,13 +177,12 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="author-img">
-              <img src="../assets/img/nosotros.jpg" class="img-fluid" alt="Nosotros" />
+              <img src="../assets/img/nosotros.jpg" class="img-fluid img-corners" alt="Nosotros" />
             </div>
           </div>
           <div class="col-lg-7 d-flex flex-column justify-content-center">
             <div class="section-title mt-4">
               <h2>Nuestra Empresa</h2>
-
               <p>
                 Somos una empresa que dio sus primeros pasos en el año 2012, esperanzados en un proyecto de vida, la
                 cual fue tomando forma a través del tiempo, partiendo con uno a dos trabajadores, hoy en día ya
@@ -206,13 +205,13 @@
             <div id="terrazas" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner bg-white">
                 <div class="carousel-item active">
-                  <img src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="Imagen Terraza Número 1" />
+                  <img class="img-fluid img-corners" src="../assets/img/servicios/terrazas/terraza_01.jpg" alt="Imagen Terraza Número 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="Imagen Terraza Número 2" />
+                  <img class="img-fluid img-corners" src="../assets/img/servicios/terrazas/terraza_02.jpg" alt="Imagen Terraza Número 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="Imagen Terraza Número 3" />
+                  <img class="img-fluid img-corners" src="../assets/img/servicios/terrazas/terraza_03.jpg" alt="Imagen Terraza Número 3" />
                 </div>
               </div>
             </div>
